@@ -1,3 +1,11 @@
+2003-01-17  Mark Page  <mpagenva@aol.com>
+
+	* nsd/driver.c: Change to SockRead; if request has a
+	content-length, null-terminate the content at the specified
+	length.  This fixes a problem when some browsers add extra CRLF
+	characters beyond the specified content-length on a POST (see this
+	by using IE to POST data).
+
 2003-01-16  Elizabeth Thomas <eathomas93@aol.com>
 
         * nsd/tclmisc.c: Fix WordEndsInSemi so that ns_striphtml correctly
